[package]
name = "bcm2837"
version = "1.0.0"
authors = ["equation314 <equation618@gmail.com>"]
edition = "2018"

[features]
zero_kernel_offset = []
use_generic_timer = ["aarch64"]

[dependencies]
volatile = "0.2.4"
aarch64= { git = "https://github.com/rcore-os/aarch64", version = "2.5.0", optional = true }
