[package]
name = "bcm2837"
version = "2.2.0"
authors = [
    "equation314 <equation618@gmail.com>",
    "Tianyu Gao <gaotianyu1350@126.com>",
    "BenjaminPMLovegood <benjaminpmlee@gmail.com>",
]
edition = "2018"

[features]
lower_va_range = []
use_generic_timer = []

[dependencies]
log = "0.4"
volatile = "0.2.4"
aarch64= { git = "https://github.com/rcore-os/aarch64", version = "2.7.0" }
