[package]
name = "bcm2837"
version = "2.5.1"
authors = [
    "equation314 <equation618@gmail.com>",
    "Tianyu Gao <gaotianyu1350@126.com>",
    "BenjaminPMLovegood <benjaminpmlee@gmail.com>",
]
edition = "2018"

[features]
lower_va_range = []

[dependencies]
log = "0.4"
volatile = "0.2.4"
aarch64= { git = "https://github.com/rcore-os/aarch64", version = "3.0.0" }
